# docs/swagger.yaml
@@ -193,6 +193,36 @@ definitions:
     - protocol
     - spec
     type: object
+  schemas.TaskLogItemOutput:
+    properties:
+      id:
+        type: integer
+      result:
+        description: 执行结果
+        type: string
+      retry_times:
+        description: 任务重试次数
+        type: integer
+      status:
+        allOf:
+        - $ref: '#/definitions/global.TaskStatus'
+        description: 状态 0:执行失败 1:执行中  2:执行完毕 3:任务取消(上次任务未执行完成) 4:异步执行
+      task_id:
+        description: 任务id
+        type: integer
+      total_time:
+        description: 执行总时长
+        type: integer
+    type: object
+  schemas.TaskLogOutput:
+    properties:
+      list:
+        items:
+          $ref: '#/definitions/schemas.TaskLogItemOutput'
+        type: array
+      total:
+        type: integer
+    type: object
   schemas.TaskOptionInput:
     properties:
       id:
@@ -343,7 +373,7 @@ paths:
             - $ref: '#/definitions/schemas.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/schemas.SearchTaskResponse'
+                  $ref: '#/definitions/schemas.TaskLogOutput'
               type: object
       security:
       - ApiKeyAuth: []
@@ -357,7 +387,7 @@ paths:
       description: 任务执行日志
       operationId: /api/taskLog/query
       parameters:
-      - description: 任务ID
+      - description: 任务日志ID
         in: query
         name: id
         required: true
@@ -372,7 +402,7 @@ paths:
             - $ref: '#/definitions/schemas.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/schemas.SearchTaskResponse'
+                  $ref: '#/definitions/schemas.TaskLogItemOutput'
               type: object
       security:
       - ApiKeyAuth: []
